initial.css: fix TOC bug interaction with collapsed section summaries exposed in /Crops (it overlaps the TOC making sections unclickable)

--- a/css/initial.css
+++ b/css/initial.css
@@ -313,7 +313,7 @@ header h1 {
     line-height: 1.25;
     padding: 10px 10px 2px 14px;
     position: relative;
-    z-index: 1
+    z-index: 11;
 }
 
 #TOC:empty {
